# excel-diff

./: .gitignore  MULTI_TAB_WORKSPACE_PLAN.md  README.md  VERSION_CONTROL_INTEGRATION_PLAN.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
docs/: IMPLEMENTATION_PLAN.md  VCS_DIFF_TOOL.md
scripts/: configure-vcs-diff.ps1  restore-vcs-diff.ps1
src/: App.tsx
src-tauri/: Cargo.toml  build.bat  prepare_bundled_python.py  read_excel.py  read_excel_xlwings.py  requirements-optional.txt  tauri.conf.json  test_read_output.json  write_excel.py  write_excel_xlwings.py
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  main.rs  utils.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/excel/: diag.rs  diag2.rs  engine.rs  mod.rs  reader.rs  writer.rs
src-tauri/src/models/: types.rs
src-tauri/src/vcs/: mod.rs
src/api/: mockData.ts  mockTauri.ts  tauri.ts
src/components/: DiffGrid.tsx  DiffView.tsx  DirectoryPicker.tsx  ErrorDialog.tsx  FileList.test.tsx  FileList.tsx  HistoryBar.tsx  HistoryVersionDialog.tsx  Icons.tsx  KeyColumnSelector.tsx  VcsLogDialog.tsx  VersionCompareDialog.tsx  WorkspaceTabs.tsx
src/stores/: diffStore.test.ts  diffStore.ts  editStore.test.ts  editStore.ts  historyStore.test.ts  historyStore.ts  workspaceStore.ts
src/styles/: index.css
src/test/: setupTests.ts
src/types/: diff.ts  excel.ts  vcs.ts
src/utils/: diffEngine.test.ts  (+8 more)
tests/: feature_tests.py  run_tests.py
tmp-save-check/: Shop-save-check.xlsx  minimal-save-check.xlsx
(+11 files in other folders)
