[package]
name = "excel-diff"
version = "1.0.4"
edition = "2021"
default-run = "ExcelDiff"

[[bin]]
name = "ExcelDiff"
path = "src/main.rs"

[[bin]]
name = "ExcelDiffCli"
path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
calamine = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
